<resources>
    <string name="app_name">Sharemusix</string>
    <string name="tab_text_1">Playlists</string>
    <string name="tab_text_2">Songs</string>
    <string name="tab_text_3">Artists</string>
    <string name="tab_text_4">Albums</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="enable_p2p_button">WiFi On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="get_file_button">Share Music</string>
    <string name="empty"></string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <string name="empty_message">No devices found.</string>
    <string name="p2p_off_warning">Enable WiFi from action bar button above or system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">My Device</string>
    <string name="label_peers">Peers</string>
</resources>
