<?xml version="1.0" encoding="utf-8"?>
<com.sothree.slidinguppanel.SlidingUpPanelLayout android:id="@+id/sliding_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    sothree:umanoPanelHeight="72dp"
    sothree:umanoShadowHeight="4dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sothree="http://schemas.android.com/apk/res-auto">
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="arunapps.com.sharemusix.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name"
            app:titleTextColor="@color/primaryTextColor">

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:elevation="4dp"
            app:tabGravity="fill"
            app:tabIndicatorColor="@color/BackgroundColorMain"
            app:tabIndicatorHeight="4dp"
            app:tabMode="scrollable"
            app:tabSelectedTextColor="@color/primaryTextColor"
            app:tabTextColor="@color/primaryTextColor">

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_playlist_icon"
                android:text="@string/tab_text_1" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_songs_icon"
                android:text="@string/tab_text_2" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_artist_icon"
                android:text="@string/tab_text_3" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_album_icon"
                android:text="@string/tab_text_4" />


        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</android.support.design.widget.CoordinatorLayout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:gravity="top"
                android:id="@+id/rv1"
                android:layout_alignParentTop="true"
                android:background="@color/BackgroundColorMain"
                android:padding="16dp">

                <ImageButton
                    android:id="@+id/buttonbottom"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="menu"
                    app:srcCompat="@drawable/ic_play_dark_1" />


                <TextView
                    android:id="@+id/artist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_toEndOf="@+id/imageView"
                    android:layout_toStartOf="@+id/buttonbottom"
                    android:maxLines="1"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:scrollbars="vertical"
                    android:text=""
                    android:textColor="#666666"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/imageView"
                    android:layout_toStartOf="@+id/buttonbottom"
                    android:fontFamily="@font/roboto"
                    android:maxLines="1"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text=""
                    android:textColor="#212121"
                    android:textSize="16dp"
                    android:textStyle="normal" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    app:srcCompat="@mipmap/ic_launcher" />

            </RelativeLayout>

            <ImageView
                android:id="@+id/songimage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/rv1"
                android:scaleType="fitXY"
                android:src="@drawable/ic_launcher_background" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#D9FFFFFF"
                android:gravity="bottom"
                android:padding="16dp">


                <SeekBar
                    android:id="@+id/seekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_toEndOf="@id/present_time"
                    android:layout_toRightOf="@id/present_time"
                    android:progressBackgroundTint="#212121" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/play_pause"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_below="@+id/seekBar"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:scaleType="center"
                    android:src="@drawable/ic_play_icon" />

                <ImageButton
                    android:id="@+id/previous"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_below="@+id/seekBar"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_toLeftOf="@id/play_pause"
                    android:layout_toStartOf="@id/play_pause"
                    android:background="@android:color/transparent"
                    app:srcCompat="@drawable/ic_prev_dark" />

                <ImageButton
                    android:id="@+id/next"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_below="@+id/seekBar"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_toEndOf="@id/play_pause"
                    android:layout_toRightOf="@id/play_pause"
                    android:background="@android:color/transparent"
                    app:srcCompat="@drawable/ic_next_dark" />

                <TextView
                    android:id="@+id/present_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="0:00" />

                <TextView
                    android:id="@+id/total_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:text="0:00" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</com.sothree.slidinguppanel.SlidingUpPanelLayout>